trunk/Archive2/2c/8b47f4d0c95270/output
main.cpp: In function 'City buildNetwork()':
main.cpp:27:12: error: could not convert 'cityList' from 'City*' to 'City'
     return cityList;
            ^
main.cpp: In function 'int main()':
main.cpp:32:15: error: cannot convert 'City' to 'City*' in assignment
     builtList = buildNetwork();
               ^
main.cpp: In function 'City buildNetwork()':
main.cpp:28:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
